css/name-section.scss
.name {
    margin: 0 auto;
    top: 50%;
    left: 0;
    right: 0;
    font-size: 32px;
    @include transform(translateY(-50%));
    width: 60%;
    position: absolute;
    border: 7px solid white;
    padding: 20px;
}

.name-section {
    color: white;
    //background: url('images/shreveport.png');
    background: url('../images/shreveport.jpg');
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    height: 100%;
    width: 100%;
    text-align: center;
    font-size: 0;
}

// Background with opacity
.bg-overlay--name-section {
    background: $primaryColor;
    opacity: 0.2;
    width: 100%;
    height: 100%;
}

.nav--name-section {
    width: 100%;
    padding: 10px 0 0 0;
    margin: 0 auto;
    position: absolute;
    top: 0;
    left: 50%;
    font-size: 15px;
    text-transform: uppercase;
    word-spacing: 5px;
    z-index: 1;
    @include transform(translateX(-50%));
}

